--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,43 +9,40 @@ body {
     Arial, Helvetica, sans-serif;
 }
 
-/* Hides the scrollbar for modern browsers */
 
 * {
-  scrollbar-width: thin; /* Firefox */
-  -ms-overflow-style: 2; /* Internet Explorer 10+ */
+  scrollbar-width: thin;
+  -ms-overflow-style: 2;
 }
 
 .hide-scroll {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .hide-scroll::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none;
 }
 
-/* For WebKit browsers */
 ::-webkit-scrollbar {
-  width: 8px; /* Width of the scrollbar */
-  height: 8px; /* Height of the scrollbar */
+  width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888; /* Color of the scrollbar handle */
-  border-radius: 10px; /* Rounded corners for the scrollbar handle */
+  background: #888;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Color of the scrollbar handle on hover */
+  background: #555;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Color of the scrollbar track */
-  border-radius: 10px; /* Rounded corners for the scrollbar track */
+  background: #f1f1f1;
+  border-radius: 10px;
 }
 
-/* Hide the scrollbar arrows */
 ::-webkit-scrollbar-button {
   display: none;
 }
@@ -54,14 +51,12 @@ body {
   width: 12px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
